/*
Copyright 2023 The Invisinets Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

	http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package commonpb;

option go_package="github.com/NetSys/invisinets/pkg/invisinetspb/commonpb";

enum Direction {
    INBOUND = 0;
    OUTBOUND = 1;
}

// TODO ?: have a version of this without the tags field to avoid users setting that at all
message PermitListRule {
    string id = 1;
    repeated string targets = 2;
    Direction direction = 3;
    int32 src_port = 4;
    int32 dst_port = 5;
    int32 protocol = 6;
    repeated string tags = 7;
}

message PermitList {
    string associated_resource = 1; 
    repeated PermitListRule rules = 2;
    string namespace = 3;
}

message ResourceDescriptionString {
    string id = 1;
    string description = 2;
}
